@@ -1,3 +1,8 @@
+2015-03-09  Jason Merrill  <jason@redhat.com>
+
+	PR c++/65339
+	* call.c: Don't call maybe_resolve_dummy when calling a constructor.
+
 2015-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/65120
